fixed scrolling/no scrolling issue on mobile/desktop

--- a/main.css
+++ b/main.css
@@ -6,14 +6,9 @@ html, body {
 
 body {
     font-family: "Poiret One";
+    overflow:hidden;
 }
 
-#wrapper {
-    overflow:hidden;
-    overflow-x:hidden !important;
-    height:100%;
-    position:relative;
-}
 
 .container {
     display: flex;
@@ -22,7 +17,7 @@ body {
 }
 
 #home {
-    background: url(bg4.1.jpg) no-repeat center center fixed; 
+    background: url(bg4.1.jpg) no-repeat center center;// fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -31,7 +26,7 @@ body {
 }
 
 #proposal {
-    background: url(bg6.1.jpg) no-repeat center center fixed; 
+    background: url("bg6.1.jpg") no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -111,11 +106,11 @@ h2 {
 }
 
 #proposal-title {
-    top: 40%;
+    top: 30%;
     left: 20%;
     position: relative;
     font-size: 30px;
-    width: 100px;
+    width: 140px;
 }
 
 a {
@@ -304,5 +299,11 @@ header {
     #DateCountdown {
         height:90px;
         width:360px;
+    }
+    #wrapper {
+        overflow:hidden;
+        overflow-x:hidden !important;
+        height:100%;
+        position:relative;
     }
 }
